--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -3,14 +3,14 @@ all:
     wordpress:
       hosts:
         wordpress_ec2:
-          ansible_host: 54.178.41.253
+          ansible_host: 57.181.5.47
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: ~/.ssh/id_ed25519
+          ansible_ssh_private_key_file: ~/.ssh/id_rsa
           ansible_ssh_common_args: -o StrictHostKeyChecking=no
     nat_instance:
       hosts:
         nat_ec2:
-          ansible_host: 35.73.60.169
+          ansible_host: 18.176.187.78
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: ~/.ssh/id_ed25519
+          ansible_ssh_private_key_file: ~/.ssh/id_rsa
           ansible_ssh_common_args: -o StrictHostKeyChecking=no
