feat: 不要なスクリプトの削除と設定ファイルの追加
- UserDataログ確認用スクリプト（check_userdata_logs.sh）と検証用インスタンス接続スクリプト（connect_validation.sh）を削除
- デプロイメント設定を管理するための新しい設定ファイル（deployment_config.json）を追加
- main.tfにドメイン登録情報とプロバイダー設定を追加し、Route53モジュールの更新を反映
- outputs.tfにドメイン登録状態と有効期限の出力を追加
- README.mdにスクリプトの使用方法を追記し、運用手順を明確化

--- a/ansible/roles/apache/tasks/main.yml
+++ b/ansible/roles/apache/tasks/main.yml
@@ -30,10 +30,13 @@
     group: apache
   become: yes
 
-- name: Remove default index.html if exists
-  file:
-    path: /var/www/html/index.html
-    state: absent
+- name: Create index.html for testing
+  copy:
+    content: "<html><body><h1>Apache is working!</h1></body></html>"
+    dest: /var/www/html/index.html
+    mode: '0644'
+    owner: apache
+    group: apache
   become: yes
 
 - name: Enable and start Apache service
