feat: Terraform設定のリファクタリングと新規ファイル追加
- .gitignoreに機密情報やログ、バックアップファイルの除外ルールを追加
- deployment_config.example.jsonを新規作成し、デプロイメント設定のサンプルを提供
- locals.tfを新規作成し、共通設定や自動リソース名生成のロジックを定義
- main.tfをリファクタリングし、ローカル値を使用して設定の一貫性を向上
- outputs.tfをリファクタリングし、出力定義を整理
- provider.tfをリファクタリングし、プロバイダー設定を明確化
- README.mdにセットアップ手順やセキュリティに関する注意事項を追加
- terraform.tfvars.exampleを新規作成し、変数設定のサンプルを提供
- スクリプトやテンプレートの構成を整理し、可読性を向上

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,48 @@
 .terraform/
 crash.log
 
-# Sensitive
+# Sensitive configuration files
 *.tfvars
+!*.tfvars.example
+deployment_config.json
+!deployment_config.example.json
+
+# Logs
+*.log
+logs/
+
+# Backup files
+*.backup
+*.backup.*
+
+# SSH keys
+*.pem
+*.key
+id_rsa
+id_rsa.pub
+
+# Environment specific files
+.env
+.env.local
+.env.production
+.env.staging
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
