--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,11 +1,95 @@
 [defaults]
+# インベントリ設定
 inventory = inventory/hosts.yml
 roles_path = roles
+
+# 接続設定
 host_key_checking = False
 timeout = 30
 gathering = smart
 fact_caching = memory
+fact_caching_connection = memory
+fact_caching_timeout = 86400
+
+# パフォーマンス設定
+forks = 10
+pipelining = True
+accelerate = True
+accelerate_port = 5099
+accelerate_timeout = 7200
+accelerate_connect_timeout = 30
+
+# ログ設定
+log_path = logs/ansible.log
+display_skipped_hosts = False
+display_ok_hosts = False
+display_changed_hosts = True
+display_failed_hosts = True
+
+# セキュリティ設定
+allow_world_readable_tmpfiles = False
+allow_world_readable_secrets = False
+hash_behaviour = merge
+
+# 実行設定
+any_errors_fatal = True
+force_handlers = True
+retry_files_enabled = False
+stdout_callback = yaml
+
+# 環境変数による設定
+environment = production
+verbosity = 0
 
 [ssh_connection]
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
-pipelining = True 
+# SSH接続設定
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes -o ConnectTimeout=30 -o ServerAliveInterval=60 -o ServerAliveCountMax=3
+pipelining = True
+control_path = /tmp/ansible-ssh-%%h-%%p-%%r
+control_path_dir = ~/.ansible/cp
+control_master = auto
+control_persist = 60s
+
+[privilege_escalation]
+# 権限昇格設定
+become = True
+become_method = sudo
+become_user = root
+become_ask_pass = False
+become_flags = -H -S -n
+
+[persistent_connection]
+# 永続接続設定
+connect_timeout = 30
+command_timeout = 30
+
+[galaxy]
+# Ansible Galaxy設定
+server_list = release_galaxy
+server_list = release_galaxy_testing
+
+[galaxy_server.release_galaxy]
+url = https://galaxy.ansible.com/
+token = 
+
+[galaxy_server.release_galaxy_testing]
+url = https://galaxy.ansible.com/
+token = 
+
+[inventory]
+# インベントリ設定
+enable_plugins = host_list, script, auto, yaml, ini, toml
+cache = yes
+cache_timeout = 86400
+cache_connection = memory
+
+[callback_whitelist]
+# コールバック設定
+whitelist = timer, profile_tasks, profile_roles
+
+[callback_timer]
+# タイマーコールバック設定
+callback_whitelist = timer
+timer_format = seconds
+timer_seconds = 10
+timer_verbose = True 
