refactor: GitHub Actions移行完了とリポジトリクリーンアップ
- 従来のシェルスクリプト10個を削除（GitHub Actionsに移行済み）
- ドキュメントをdocs/ディレクトリに整理
- 一時ファイルとバックアップファイルを削除
- GitHub ActionsワークフローとREADMEを追加
- クリーンアップレポートを作成
- .gitignoreとREADME.mdを更新

移行完了により安全性、効率性、可視性が大幅に向上

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Terraform state
+# Terraform state and plan files
 *.tfstate
 *.tfstate.backup
+*.tfstate.*.backup
 .terraform/
 crash.log
+*.tfplan
 
 # Sensitive configuration files
 *.tfvars
@@ -49,3 +51,15 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Test directories
+test_workflow/
+
+# Ansible artifacts
+ansible/inventory/hosts.yml
+ansible/*.retry
+
+# Deployment artifacts
+*.tar.gz
+*.sql
+backup_*
