feat: WordPress環境のデプロイメントスクリプトと設定の追加
- WordPress自動デプロイメントシステムの初期設定スクリプトを新規作成
- 検証環境準備スクリプトを追加し、データベース接続確認機能を実装
- 本番環境反映スクリプトを新規作成し、デプロイメントのログ機能を追加
- WordPress 500エラー調査スクリプトを追加し、トラブルシューティングを支援
- ドメイン登録確認スクリプトを新規作成し、Terraform設定の自動化を強化
- 各種スクリプトにエラーハンドリングとログ機能を実装し、可読性を向上

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -49,6 +49,8 @@ control_path = /tmp/ansible-ssh-%%h-%%p-%%r
 control_path_dir = ~/.ansible/cp
 control_master = auto
 control_persist = 60s
+# SSHキーは環境変数SSH_PRIVATE_KEY_FILEで管理
+# デフォルト値は設定しない（セキュリティのため）
 
 [privilege_escalation]
 # 権限昇格設定
@@ -65,8 +67,7 @@ command_timeout = 30
 
 [galaxy]
 # Ansible Galaxy設定
-server_list = release_galaxy
-server_list = release_galaxy_testing
+server_list = release_galaxy,release_galaxy_testing
 
 [galaxy_server.release_galaxy]
 url = https://galaxy.ansible.com/
