--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -3,14 +3,17 @@ all:
     wordpress:
       hosts:
         wordpress_ec2:
-          ansible_host: 57.181.5.47
+          ansible_host: 54.95.42.72
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: ~/.ssh/id_rsa
-          ansible_ssh_common_args: -o StrictHostKeyChecking=no
+          ansible_ssh_private_key_file: /home/kwata627/.ssh/wp-shamo-ssh-key
+          ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          ansible_ssh_extra_args: -o ConnectTimeout=30
+          rds_endpoint: wp-shamo-rds.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306
     nat_instance:
       hosts:
         nat_ec2:
-          ansible_host: 18.176.187.78
+          ansible_host: 57.183.67.44
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: ~/.ssh/id_rsa
-          ansible_ssh_common_args: -o StrictHostKeyChecking=no
+          ansible_ssh_private_key_file: /home/kwata627/.ssh/wp-shamo-ssh-key
+          ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          ansible_ssh_extra_args: -o ConnectTimeout=30
