--- a/ansible/playbooks/wordpress_setup.yml
+++ b/ansible/playbooks/wordpress_setup.yml
@@ -4,14 +4,15 @@
   hosts: wordpress
   become: yes
   vars:
-    wordpress_db_host: "{{ rds_endpoint }}"
+    wordpress_db_host: "{{ lookup('env', 'WORDPRESS_DB_HOST') | default('localhost') }}"
     wordpress_db_name: wordpress
     wordpress_db_user: wordpress
-    wordpress_db_password: "{{ db_password }}"
+    wordpress_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password') }}"
     wordpress_config_auto: true
   
   roles:
     - system
+    - database
     - apache
     - php
     - security
