--- a/ansible/roles/apache/tasks/main.yml
+++ b/ansible/roles/apache/tasks/main.yml
@@ -30,13 +30,10 @@
     group: apache
   become: yes
 
-- name: Create index.html for testing
-  copy:
-    content: "<html><body><h1>Apache is working!</h1></body></html>"
-    dest: /var/www/html/index.html
-    mode: '0644'
-    owner: apache
-    group: apache
+- name: Remove test index.html if exists
+  file:
+    path: /var/www/html/index.html
+    state: absent
   become: yes
 
 - name: Enable and start Apache service
