feat: SSL設定の自動検証・修正システムの追加
- SSL設定の問題を自動的に検出・修正するスクリプトを新規作成
- GitHub Actionsを使用した定期的なSSL証明書の監視ワークフローを追加
- Terraform設定にDNS検証レコードの自動作成機能を実装
- 証明書の有効期限と検証失敗を監視するCloudWatchアラームを追加
- ドキュメントにSSL設定自動検証・修正システムの概要を記載
- 各種スクリプトにエラーハンドリングとログ機能を実装し、可読性を向上

--- a/.github/workflows/wordpress-setup.yml
+++ b/.github/workflows/wordpress-setup.yml
@@ -70,6 +70,15 @@ jobs:
           ssh-keyscan -H ${{ secrets.WORDPRESS_HOST }} >> ~/.ssh/known_hosts
         fi
         
+    - name: Initialize Terraform
+      run: |
+        terraform init
+        
+    - name: Run SSL validation and fixes
+      run: |
+        chmod +x scripts/validate-ssl-setup.sh
+        ./scripts/validate-ssl-setup.sh
+        
     - name: Generate inventory
       working-directory: ./ansible
       run: |
