feat: ドメイン分析機能の追加とTerraform設定の改善
- ドメインの新規/既存を判別するためのデータソースを追加
- ドメイン分析結果をローカル変数で解析し、設定に反映
- Makefileにセキュアパスワード生成のターゲットを追加
- ドメイン分析結果を出力する機能を追加
- 既存ホストゾーンの強制再作成機能を実装
- SSL設定の自動実行を有効にする変数を追加
- WordPress環境の言語設定を日本語に変更
- 各種スクリプトにエラーハンドリングとログ機能を実装し、可読性を向上

--- a/ansible/group_vars/wordpress.yml
+++ b/ansible/group_vars/wordpress.yml
@@ -1,6 +1,8 @@
 ---
 # WordPressサーバー用変数
-wordpress_domain: "{{ ansible_default_ipv4.address }}"
+wordpress_domain: "{{ ansible_public_ipv4 | default('') }}"
+wordpress_locale: ja
+wordpress_language: ja
 
 # データベース設定
 wordpress_db_host: "{{ rds_endpoint | default('localhost') }}"
@@ -27,9 +29,9 @@ wordpress_automatic_updater_disabled: true
 wordpress_disallow_file_edit: true
 wordpress_disallow_file_mods: true
 
-# SSL設定
-wordpress_force_ssl: true
-wordpress_ssl_admin: true
+# SSL設定（ACM証明書検証完了後に有効化）
+wordpress_force_ssl: false
+wordpress_ssl_admin: false
 
 # 監視設定
 monitoring_interval_hours: 6
