--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -3,17 +3,18 @@ all:
     wordpress:
       hosts:
         wordpress_ec2:
-          ansible_host: 54.95.42.72
+          ansible_host: 54.250.141.52
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: /home/kwata627/.ssh/wp-shamo-ssh-key
+          ansible_ssh_private_key_file: ~/.ssh/wordpress_key
           ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           ansible_ssh_extra_args: -o ConnectTimeout=30
           rds_endpoint: wp-shamo-rds.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306
+          ansible_public_ipv4: 54.250.141.52
     nat_instance:
       hosts:
         nat_ec2:
-          ansible_host: 57.183.67.44
+          ansible_host: 52.196.222.27
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: /home/kwata627/.ssh/wp-shamo-ssh-key
+          ansible_ssh_private_key_file: ~/.ssh/wordpress_key
           ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           ansible_ssh_extra_args: -o ConnectTimeout=30
