feat: CloudFront関連ファイルの追加と設定の更新
- CloudFront IPアドレスリストを含む新しいファイルを追加
- CloudFrontアクセス用のセキュリティグループを設定
- CloudFront設定を有効化し、関連する出力を追加
- WordPress設定をHTTPSに対応させるための更新を実施
- Ansibleプレイブックを追加し、SSL設定の自動化を強化

--- a/ansible/group_vars/wordpress.yml
+++ b/ansible/group_vars/wordpress.yml
@@ -1,6 +1,6 @@
 ---
 # WordPressサーバー用変数
-wordpress_domain: "{{ ansible_public_ipv4 | default('') }}"
+wordpress_domain: "{{ domain_name | default('example.com') }}"
 wordpress_locale: ja
 wordpress_language: ja
 
@@ -30,8 +30,8 @@ wordpress_disallow_file_edit: true
 wordpress_disallow_file_mods: true
 
 # SSL設定（ACM証明書検証完了後に有効化）
-wordpress_force_ssl: false
-wordpress_ssl_admin: false
+wordpress_force_ssl: true
+wordpress_ssl_admin: true
 
 # 監視設定
 monitoring_interval_hours: 6
