--- a/.github/workflows/terraform-config.yml
+++ b/.github/workflows/terraform-config.yml
@@ -189,23 +189,67 @@ jobs:
 
       - name: Generate deployment_config.json
         run: |
-          # 設定ファイルのテンプレートから生成
+          # 環境変数の設定
+          export PROJECT="${{ github.event.inputs.project_name || 'wp-shamo' }}"
+          export DOMAIN_NAME="${{ github.event.inputs.domain_name || 'shamolife.com' }}"
+          export AWS_REGION="${{ github.event.inputs.aws_region || 'ap-northeast-1' }}"
+          
+          # 設定ファイルのテンプレートから生成（変数置換付き）
           if [ -f ".github/workflows/config/deployment-config-template.json" ]; then
-            cp ".github/workflows/config/deployment-config-template.json" "${{ env.DEPLOYMENT_CONFIG_FILE }}"
-            echo "Generated deployment_config.json from template"
+            # 直接的な変数置換でdeployment_config.jsonを生成
+            cat > "${{ env.DEPLOYMENT_CONFIG_FILE }}" << EOF
+          {
+              "production": {
+                  "ec2_instance_id": "\${PROD_EC2_INSTANCE_ID:-}",
+                  "rds_identifier": "\${PROD_RDS_IDENTIFIER:-$PROJECT-rds}",
+                  "wordpress_url": "\${PROD_WORDPRESS_URL:-https://$DOMAIN_NAME}",
+                  "backup_retention_days": "\${BACKUP_RETENTION_DAYS:-7}",
+                  "ssh_user": "\${SSH_USER:-ec2-user}",
+                  "ssh_key_path": "\${SSH_KEY_PATH:-ssh_key.pem}"
+              },
+              "validation": {
+                  "ec2_instance_id": "\${VALID_EC2_INSTANCE_ID:-}",
+                  "rds_identifier": "\${VALID_RDS_IDENTIFIER:-$PROJECT-rds-validation}",
+                  "wordpress_url": "\${VALID_WORDPRESS_URL:-http://validation-ip}",
+                  "test_timeout_minutes": "\${TEST_TIMEOUT_MINUTES:-30}",
+                  "ssh_user": "\${SSH_USER:-ec2-user}",
+                  "ssh_key_path": "\${SSH_KEY_PATH:-ssh_key.pem}"
+              },
+              "deployment": {
+                  "auto_approve": "\${AUTO_APPROVE:-false}",
+                  "rollback_on_failure": "\${ROLLBACK_ON_FAILURE:-true}",
+                  "notification_email": "\${NOTIFICATION_EMAIL:-}",
+                  "backup_before_deployment": "\${BACKUP_BEFORE_DEPLOYMENT:-true}",
+                  "test_validation_environment": "\${TEST_VALIDATION_ENVIRONMENT:-true}",
+                  "stop_validation_after_deployment": "\${STOP_VALIDATION_AFTER_DEPLOYMENT:-true}"
+              },
+              "aws": {
+                  "region": "\${AWS_REGION:-$AWS_REGION}",
+                  "profile": "\${AWS_PROFILE:-default}",
+                  "max_retries": "\${AWS_MAX_RETRIES:-3}"
+              },
+              "github": {
+                  "repository": "\${GITHUB_REPOSITORY:-owner/repo}",
+                  "branch": "\${GITHUB_BRANCH:-main}",
+                  "workflow_id": "\${GITHUB_WORKFLOW_ID:-wordpress-deployment.yml}"
+              }
+          }
+          EOF
+            echo "Generated deployment_config.json from template with variable substitution"
+            echo "Project: $PROJECT, Domain: $DOMAIN_NAME"
           else
             # 基本的な設定ファイルを生成
             cat > "${{ env.DEPLOYMENT_CONFIG_FILE }}" << EOF
           {
               "production": {
                   "ec2_instance_id": "",
-                  "rds_identifier": "wp-shamo-rds",
-                  "wordpress_url": "http://${{ github.event.inputs.domain_name || 'example.com' }}",
+                  "rds_identifier": "$PROJECT-rds",
+                  "wordpress_url": "https://$DOMAIN_NAME",
                   "backup_retention_days": 7
               },
               "validation": {
                   "ec2_instance_id": "",
-                  "rds_identifier": "wp-shamo-rds-validation",
+                  "rds_identifier": "$PROJECT-rds-validation",
                   "wordpress_url": "http://validation-ip",
                   "test_timeout_minutes": 30
               },
