--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -3,19 +3,16 @@ all:
     wordpress:
       hosts:
         wordpress_ec2:
-          ansible_host: 13.158.127.109
+          ansible_host: 54.64.49.220
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: /tmp/terraform_ssh_key
+          ansible_ssh_private_key_file: ~/.ssh/wordpress_key
           ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           ansible_ssh_extra_args: -o ConnectTimeout=30
-          rds_endpoint: wp-shamo-rds.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306
-          domain_name: shamolife.com
-          cloudfront_domain: cdn.shamolife.com
     nat_instance:
       hosts:
         nat_ec2:
-          ansible_host: 52.196.222.27
+          ansible_host: 54.64.109.28
           ansible_user: ec2-user
-          ansible_ssh_private_key_file: /tmp/terraform_ssh_key
+          ansible_ssh_private_key_file: ~/.ssh/wordpress_key
           ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           ansible_ssh_extra_args: -o ConnectTimeout=30
