feat: WordPress環境の設定とセキュリティ強化
- 環境変数設定のための新しいテンプレートファイルを追加
- 環境変数を読み込むスクリプトを新規作成
- Ansibleの設定ファイルを更新し、環境変数を利用するように変更
- WordPressの設定ファイルをCloudFront経由でのアクセスに対応させるための修正
- HTTPセキュリティ設定を追加し、CloudFrontに最適化
- 不要なSSL設定関連のプレイブックとタスクを削除
- PHPのバージョンを8.4に更新し、関連するモジュールを追加

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ test_workflow/
 # Ansible artifacts
 ansible/inventory/hosts.yml
 ansible/*.retry
+ansible/roles/*/defaults/main.yml
+ansible/group_vars/*.yml
+ansible/host_vars/
+ansible/.env
 
 # Deployment artifacts
 *.tar.gz
