--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -8,6 +8,7 @@ all:
           ansible_ssh_private_key_file: ~/.ssh/wordpress_key
           ansible_ssh_common_args: -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           ansible_ssh_extra_args: -o ConnectTimeout=30
+          rds_endpoint: wp-shamo-rds.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306
     nat_instance:
       hosts:
         nat_ec2:
