--- a/ansible/playbooks/wordpress_setup.yml
+++ b/ansible/playbooks/wordpress_setup.yml
@@ -1,12 +1,12 @@
 ---
-# WordPress環境構築プレイブック
+# WordPress環境構築プレイブック（CloudFront対応版）
 - name: Setup WordPress environment
   hosts: wordpress
   become: yes
   vars:
     wordpress_db_host: "{{ lookup('env', 'WORDPRESS_DB_HOST') | default('localhost') }}"
     wordpress_db_name: wordpress
-    wordpress_db_user: wordpress
+    wordpress_db_user: admin
     wordpress_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password') }}"
     wordpress_config_auto: true
     ssh_private_key: "{{ lookup('file', '/tmp/terraform_ssh_key') }}"
