--- a/ansible/roles/wordpress/defaults/main.yml
+++ b/ansible/roles/wordpress/defaults/main.yml
@@ -6,12 +6,12 @@ wordpress_locale: ja
 wordpress_language: ja
 
 # データベース設定
-wordpress_db_name: wordpress
-wordpress_db_user: wordpress
-wordpress_db_password: password
-wordpress_db_host: localhost
-wordpress_db_charset: utf8
-wordpress_db_collate: ''
+wordpress_db_name: "{{ lookup('env', 'WORDPRESS_DB_NAME') | default('wordpress') }}"
+wordpress_db_user: "{{ lookup('env', 'WORDPRESS_DB_USER') | default('wordpress') }}"
+wordpress_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('password') }}"
+wordpress_db_host: "{{ lookup('env', 'WORDPRESS_DB_HOST') | default('localhost') }}"
+wordpress_db_charset: "{{ lookup('env', 'WORDPRESS_DB_CHARSET') | default('utf8') }}"
+wordpress_db_collate: "{{ lookup('env', 'WORDPRESS_DB_COLLATE') | default('') }}"
 
 # テーブルプレフィックス
 wordpress_table_prefix: wp_
